Fixed z-index

--- a/js-library/app/css/_icon_buttons.scss
+++ b/js-library/app/css/_icon_buttons.scss
@@ -3,7 +3,7 @@ factlink-icon-button {
   position: absolute;
   display: block;
   cursor: pointer;
-  z-index: $max-z-index - 1;
+  z-index: $max-z-index - 2;
   margin-left: 0.5em;
 }
 
